[package]
name = "network-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
libproc = "0.14.11"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
